Added Integrity Checking